2000-12-29  Hans-Peter Nilsson  <hp@bitrange.com>

	* elfcode.h (elf_object_p): Also restore the bfd mach field on
	error, by calling bfd_default_set_arch_mach with incoming
	values.

2000-12-26  Kazu Hirata  <kazu@hxi.com>

	* vaxnetbsd.c: Fix formatting.
	* versados.c: Likewise.
	* vms-gsd.c: Likewise.
	* vms-hdr.c: Likewise.
	* vms-misc.c: Likewise.

2000-12-25  Alexandre Oliva  <aoliva@redhat.com>

	* archive.c (coff_write_armap): Don't write more than symbol_count
	`archive_member_file_ptr's.

2000-12-25  Kazu Hirata  <kazu@hxi.com>

	* vms-tir.c: Fix formatting.

2000-12-23  Kazu Hirata  <kazu@hxi.com>

	* vms.c: Fix formatting.
	* vms.h: Likewise.

2000-12-21  Santeri Paavolainen <santtu@ssh.com>

	* vms-hdr.c: Include alloca.h if HAVE_ALLOCA_H is defined.

	* peicode.h (pe_ILF_object_p): Add const to import of TARGET_LITTLE_SYM.

	* elf32-m32r.c (m32r_elf_generic_reloc): Add cast to avoid (void *)
	arithmetic.

	* elf32-fr30.c: Add casts to avoid (void *) arithmetic.

	* coffcode.h (styp_to_sec_flags): Add empty statement after label.

2000-12-21  Richard Sandiford  <rsandifo@redhat.com>

	* libbfd.c (bfd_get_bits): Added
	(bfd_put_bits): Likewise
	* bfd-in.h: Declared the above.
	* bfd-in2.h: Regenerated.

2000-12-20  Kazu Hirata  <kazu@hxi.com>

	* targets.c: Fix formatting.
	* tekhex.c: Likewise.
	* trad-core.c: Likewise.

2000-12-19  Kazu Hirata  <kazu@hxi.com>

	* sco5-core.c: Fix formatting.
	* section.c: Likewise.
	* sparclinux.c: Likewise.
	* sparclynx.c: Likewise.
	* sparcnetbsd.c: Likewise.
	* srec.c: Likewise.
	* stabs.c: Likewise.
	* stab-syms.c: Likewise.
	* sunos.c: Likewise.
	* syms.c: Likewise.
	* sysdep.h: Likewise.

2000-12-18  Nick Clifton  <nickc@redhat.com>

	* coff-arm.c (EXTRA_S_FLAGS): Only define if not already
	defined.
	* epoc-pe-arm.c (EXTRA_S_FLAGS): Define.
	* epoc-pei-arm.c (EXTRA_S_FLAGS): Define.

2000-12-18  Nick Clifton  <nickc@redhat.com>

	* vms-misc.c (_bfd_vms_get_record): Add default case to
	file_format switch.
